@@ -1,1 +1,2 @@
 si_core
+*.so
