@@ -1,6 +1,6 @@
-CLIB_PATH=
-GCC_PLUGIN_INC=
-SRCINV_ROOT=
+CLIB_PATH=/home/zerons/workspace/clib
+GCC_PLUGIN_INC=/usr/lib/gcc/x86_64-linux-gnu/6/plugin/include
+SRCINV_ROOT=/home/zerons/workspace/srcinv
 # possible release options: -g -ON -DUSE_NCURSES
 CC_RELEASE=-g -O3 -DUSE_NCURSES
 
